--- a/View/LoginView.xaml
+++ b/View/LoginView.xaml
@@ -7,7 +7,7 @@
         <Grid.RowDefinitions>
             <RowDefinition Height="160" />
             <RowDefinition />
-            <RowDefinition Height="90" />
+
         </Grid.RowDefinitions>
 
         <Image Source="../Ressource/logo.png" HorizontalAlignment="Center" VerticalAlignment="Center" Height="100" Width="272" Grid.Row="0"/>
@@ -39,7 +39,15 @@
 
                 <TextBox Text="{Binding login, Mode=OneWayToSource}" Grid.Row="0" Grid.Column="1"  Margin="10,8,60,8" />
                 <TextBox Text="{Binding pass, Mode=OneWayToSource}" Grid.Row="1" Grid.Column="1" Margin="10,8,60,8" />
+                
             </Grid>
+                <!-- Button submit -->
+                <Button Style="{StaticResource {x:Static ToolBar.ButtonStyleKey}}" Margin="35" Command="{Binding btnLogin}" Background="#FFEEEEEE" BorderBrush="#FFAAAAAA" Grid.Row="2"  >
+                    <StackPanel Orientation="Horizontal">
+                        <Image Source="../Ressource/login.png" Width="30" Height="30" />
+                        <TextBlock Text="Connexion" VerticalAlignment="Center" Margin="6,0" FontWeight="Bold" />
+                    </StackPanel>
+                </Button>
             </StackPanel>
         </Grid>
         <Grid Grid.Row="1">
@@ -54,14 +62,6 @@
             </Grid.Style>
             <control:LoadingAnimation HorizontalAlignment="Center" VerticalAlignment="Center" />
         </Grid>
-
-        <!-- Button submit -->
-        <Button Style="{StaticResource {x:Static ToolBar.ButtonStyleKey}}" Command="{Binding btnLogin}" Background="#FFEEEEEE" BorderBrush="#FFAAAAAA" Grid.Row="2"  >
-            <StackPanel Orientation="Horizontal">
-                <Image Source="../Ressource/login.png" Width="30" Height="30" />
-                <TextBlock Text="  Connexion" VerticalAlignment="Center" FontWeight="Bold" />
-            </StackPanel>
-        </Button>
 
     </Grid>
 </Window>
